--- a/Advanced_Python_Day3_Algorithms_Lecture-Starter.ipynb
+++ b/Advanced_Python_Day3_Algorithms_Lecture-Starter.ipynb
@@ -1571,14 +1571,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['.', 'ecnetnes', 'a', 'si', 'siht']\n"
+      "['.', 'sentence', 'a', 'is', 'this']\n"
      ]
     }
    ],
@@ -1590,10 +1590,6 @@
     "while left < right:\n",
     "\n",
     "    words[left], words[right] = words[right], words[left]\n",
-    "\n",
-    "    words[left] = words[left][::-1]\n",
-    "\n",
-    "    words[right] = words[right][::-1]\n",
     "\n",
     "    left += 1\n",
     "\n",
@@ -1616,11 +1612,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n"
+     ]
+    }
+   ],
    "source": [
-    "a_text = 'In computing, a hash table hash map is a data structure which implements an associative array abstract data type, a structure that can map keys to values. A hash table uses a hash function to compute an index into an array of buckets or slots from which the desired value can be found'\n"
+    "a_text = 'In computing, a hash table hash map is a data structure which implements an associative array abstract data type, a structure that can map keys to values. A hash table uses a hash function to compute an index into an array of buckets or slots from which the desired value can be found'\n",
+    "def count_word(text):\n",
+    "    words = text.lower().split()\n",
+    "    word_count = {}\n",
+    "    for word in words:\n",
+    "            if word in word_count:\n",
+    "                word_count[word] += 1\n",
+    "                continue\n",
+    "    return word_count\n",
+    "\n",
+    "count_word(a_text)"
    ]
   },
   {
@@ -1640,6 +1654,14 @@
    "source": [
     "nums_list = [10, 23, 45, 70, 11, 15]\n",
     "target = 70\n",
+    "\n",
+    "\n",
+    "def linear_search(nums_list, target):\n",
+    "    for i in range (len(nums_list)):\n",
+    "        if nums_list[i] == target:\n",
+    "            return f'Index {i}'\n",
+    "    return -1\n",
+    "    \n",
     "\n",
     "# If number is not present return -1\n"
    ]
